# librelogic

./: .gitignore  Config.sh  README.md  cffi_build.py  plclite.py  st.flex  st.y
apps/: CMakeLists.txt  plclite.c  plclite.h
include/: codegen.h  data.h  hardware.h  instruction.h  parser-il.h  parser-ld.h  parser-st.h  parser-tree.h  plc_iface.h  plclib.h  rung.h
src/: CMakeLists.txt  plclite.c  util.c  util.h
src/hw/: hardware-comedi.c  hardware-comedi.h  hardware-dry.c  hardware-dry.h  hardware-gpiod.c  hardware-gpiod.h  hardware-sim.c  hardware-sim.h  hardware-uspace.c  hardware-uspace.h  hardware.c
src/vm/: codegen.c  data.c  instruction.c  parser-il.c  parser-ld.c  parser-tree.c  plclib.c  rung.c
tst/: CMakeLists.txt  ut-cg.h  ut-data.h  ut-il.h  ut-init.h  ut-io.h  ut-ld.h  ut-lex.c  ut-lex.h  ut-lib.h  ut-tree.h  ut-type.h  ut-vm.c  vm-stubs.c
